feat(stepper): enhance stepper layout with custom connector and improved step labels

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,9 @@
         transform: none !important;
     }
 }
+
+@layer components {
+    .custom-step-connector .MuiStepConnector-line {
+        @apply !border-base-50;
+    }
+}
